# socrata-toolkit

./: LICENSE.txt  README.md  pyproject.toml
docs/source/: conf.py  dcat.rst  index.rst  metadata.rst
src/dartfx/socrata/: __init__.py  dcat.py  socrata.py
src/dartfx/socrata/templates/: generate_jquery.j2  generate_powershell.j2  generate_python-pandas.j2  generate_r-socrata.j2  generate_sas.j2  generate_soda-dotnet.j2  generate_soda-ruby.j2  generate_stata.j2
tests/: conftest.py  nyc_311.croissant.json  sfo-311.handcrafted.ttl  sfo_311.croissant.json  sfo_311.dcat.ttl  sfo_311.ddic.xml  sfo_311_jquery.js  sfo_311_powershell.ps1  sfo_311_python-pandas.py  sfo_311_sas.sas  sfo_311_soda-dotnet.cs  sfo_311_soda-ruby.rb  sfo_311_stata.do  test_codegen.py  test_croissant.py  test_dcat.py  test_ddic.py  vw6y-z8j6.ddic.xml  vw6y-z8j6.json
tests/croissant/: nyc_311.json  sfo_311.json
